tests/invalid/inherit/04_field_conflict.cps
class A { let n: integer; }
class B : A { let n: string; }  // redeclara campo heredado
